@@ -176,7 +176,6 @@ redacted_prefs.delete(:local_env_file)
 redacted_prefs.delete(:main_branch)
 redacted_prefs.delete(:prelaunch_branch)
 redacted_prefs.delete(:prod_webserver)
-redacted_prefs.delete(:quiet_assets)
 redacted_prefs.delete(:rvmrc)
 redacted_prefs.delete(:templates)
 
